Basic functionality of single autocomplete is done.

--- a/src/app/components/header-form/header-form.component.html
+++ b/src/app/components/header-form/header-form.component.html
@@ -3,9 +3,9 @@
     <div class="form-container">
         <form [formGroup]="headerFormGroup">
             <input type="text" placeholder="Key" formControlName="keyControl" matInput [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete">
-                @for (key of taskKeyFilteredOptions | async; track key) {
-                <mat-option [value]="key">{{key}}</mat-option>
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayJobKey">
+                @for (job of taskKeyFilteredOptions | async; track job) {
+                <mat-option [value]="job">{{job.key}}</mat-option>
                 }
             </mat-autocomplete>
             
