added some styles

--- a/src/app/components/a-job/a-job.component.scss
+++ b/src/app/components/a-job/a-job.component.scss
@@ -3,4 +3,7 @@
     justify-content: center;           /* Center the form fields */
     flex-grow: 1;                      /* Allow the form container to grow */
     margin: 0 20px;                   /* Optional margin for spacing */
+    height: 100%;                      /* Fill the entire height */
+    width: 100%;                       /* Fill the entire width */
 }
+
