fixed bugs and updated spenttime

--- a/src/app/components/a-job/a-job.component.html
+++ b/src/app/components/a-job/a-job.component.html
@@ -21,8 +21,8 @@
             }
         </mat-autocomplete>
 
-        <!-- start time edit box -->
-        <!-- <input type="text" placeholder="hh:mm:ss" formControlName="jobStartedTimeControl" matInput (blur)="onTimerBlur()"> -->
+        <!-- Timer edit box -->
+        <input type="text" placeholder="hh:mm:ss" formControlName="jobStartedTimeControl" matInput (blur)="onTimerBlur()">
 
         <label>{{ spentTime | date:'HH:mm:ss' }}</label>
         <button mat-mini-fab aria-label="Start/Stop" (click)="toggleTimer()">
