--- a/src/app/components/header-form/header-form.component.html
+++ b/src/app/components/header-form/header-form.component.html
@@ -1,7 +1,7 @@
 <div class="flex-container">
     <div class="left-item">நேரம்</div>
     <div class="form-container">
-       <a-job/>
+       <a-job [header]="true"/>
     </div>
     <div class="right-item">Right Item</div>
-</div>
+</div>`
